--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ footer{
 header{
     background-color:#1d0ea5;
     width: 100%;
-    height: 12rem;
+    height: 100%;
     margin-bottom: 2rem;
     text-align: center;
 }
@@ -125,5 +125,5 @@ header{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-content: flex-end;
+    align-content: center;
 }
