arreglo de error responsive

--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,7 @@ header{
 }
 .table th{
     background-color: #1d0ea5;
-    /* padding: 3rem; */
+    padding: 3rem;
     font-size: medium;
 }
 td{
