--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-margin: 0 auto;
+margin: 0 ;
+padding:0;
 width: 100%;
 max-width: 1200px;
 font-size: 62.5%;
@@ -68,6 +69,11 @@ header{
     margin-bottom: 2rem;
     text-align: center;
 }
+.actividades div{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
 .map-1 {
 	width: 288px;
 	height: 289px;
@@ -76,10 +82,10 @@ header{
 	border-width: 1px;
 	border-style: solid;
 }
-input
+/* input
 {
 display: block;
-}
+} */
 a
 {
     color: #ffffff;
