--- a/css/styles.css
+++ b/css/styles.css
@@ -1,268 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-/* *{
-/* margin: 0 ; */
-/* padding:0; */
-/* width: 100%;
-max-width: 1200px; */
-/* } */
-html{
-    font-size: 62.5%;
-}
-
-
-p{
-    color: #ffffff;
-    background-color: #1d5da7;
-    font-size: 1.5rem;
-    font-family: "Poppins", sans-serif;
-    font-weight: 500;
-    font-style: normal;
-    text-align: center;
-}
-h1 {
-    color: #0b4bac;
-    font-size: 4rem;
-    font-family: "Poppins", sans-serif;
-    font-weight: 500;
-    font-style: normal;
-    text-align: center;
-}
-h2 {
-    color: #0b4bac;
-    font-size: 3rem;
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    text-align: center;
-}
-h3{
-    color: #0b4bac;
-    font-size: 2rem;
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    text-align: center;
-}
-ul li{
-    list-style-type: none;
-font-size: 1.5rem;
-font-family: "Poppins", sans-serif;
-font-weight: 400;
-font-style: normal;
-display: inline;
-margin: 1.5rem;
-}
-footer{
-    background-color: #2a5f9b;
-    width: 100%;
-    height: 10rem;
-    margin-top: 2rem;
-    text-align: center;
-} 
-.parallax{
-    background-image: url(../assests/equipo2.jpg);
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 70vh;
-}
-header{
-    background-color:#1d0ea5;
-    width: 100%;
-    height: 100%;
-    margin-bottom: 2rem;
-    text-align:center;
-}
-.actividades {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-}
-
- .mapa{
-    margin:10rem 
- }
-
-input
-{
-display: block;
-} 
-a
-{
-    color: #ffffff;
-}
-body{background-color: #2998e2;
-}
-
-/* Galeria futbol */
-.galeria{
-    display: grid;
-    grid-gap: 0.5rem;
-    background-color: #1d0ea5;
-}
-.galeria{
-    grid-template-columns: 3fr 2fr;
-    grid-template-rows: 1fr 1fr 1fr ;
-}
-.galeria img{
-width: 100%;
-height: 100%;
-border-radius: 3%;
-}
-.img-1{
-    grid-column: 1/2;
-    grid-row: 1/2;
-}
-.img-2{
-    grid-column: 1/2;
-    grid-row: 2/3;
-}
-.img-3{
-    grid-column: 1/2;
-    grid-row: 3/4;
-}
-.img-4{
-    grid-column: 2/3;
-    grid-row: 1/3;
-}
-.img-5{
-    grid-column: 2/3;
-    grid-row: 3/4;
-}
-@media screen and (min-width: 320px) and (max-width :767px){
-    .galeria{
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr ;
-    }
-    /* .galeria img{
-    width: 100%;
-    height: 100%;
-    border-radius: 3%;
-    } */
-    .img-1{
-        grid-column: 1/3;
-        grid-row: 1/2;
-    }
-    .img-2{
-        grid-column: 1/3;
-        grid-row: 2/3;
-    }
-    .img-3{
-        grid-column: 1/3;
-        grid-row: 3/4;
-    }
-    .img-4{
-        grid-column: 1/2;
-        grid-row: 4/5;
-    }
-    .img-5{
-        grid-column: 2/3;
-        grid-row: 4/5;
-    }
-}
-
-/* Galeria patin */
-.galeriapatin{
-    display: grid;
-    grid-gap: 0.5rem;
-    background-color: #1d0ea5;
-}
-.galeriapatin{
-    grid-template-columns: 1fr 1
-    1fr 1fr;
-}
-        
-.galeriapatin img{
-width: 100%;
-height: 100%;
-border-radius: 3%;
-}
-.imgpatin-1{
-    grid-column: 1/2;
-    grid-row: 1/2;
-}
-.imgpatin-2{
-    grid-column: 2/3;
-    grid-row: 1/2;
-}
-.imgpatin-3{
-    grid-column: 3/4;
-    grid-row: 1/2;
-}
-
-.video{
-    display:flex;
-    flex-direction: row;
-    justify-content: center;
-    align-content: center;
-}
-header{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-content: center;
-}
-.table{
-     margin: 2 rem;
-}
-.table th{
-    background-color: #1d0ea5;
-    /* padding: 3rem; */
-    font-size: medium;
-    text-align: center;
-}
-td{
-    font-size:large;
-}
-.table tr{
-    text-align: center;
-}
-.nav-item a:hover{
-    color:#2998e2
-}
-html body form {
-    background-color: #1d0ea5;
-    border: solid 1px #161718;
-    margin: 2rem;
-    padding: 3 rem;
-    width: 100%;
-    color: #E6E6E6;
-    
-  } 
- html body form input {
-    display: block;
-    margin: 2rem;
-    padding: 1rem; 
-    width: 80%; 
-
-  } 
-  html body form textarea {
-    height: 10rem;
-    width: 100%;
-  }
-  html body form .btn-submit {
-    background-color: #2998e2;
-    border: solid 1px;
-    border-radius: 2%;
-    width: 5rem;
-    height: 3rem;
-
-  }
-  #carouselExampleAutoplaying{
-    width: 50%;
-    height: auto;
-  }
- div h2{
-    padding-top: 20rem;
-
- }
- @media screen and (min-width: 320px) and (max-width :767px){
-    #carouselExampleAutoplaying{
-        width: 100%;
-        height: auto;
-    }
-    div h2{
-        padding-top: 2rem;
-    }
- }
+/*# sourceMappingURL=styles.css.map */
