--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,30 @@ html body .nav-item a:hover {
 html body a {
   color: #ffffff;
 }
+@keyframes moverLogo {
+  0% {
+    transform: scale(1, 1);
+  }
+  25% {
+    transform: scale(1.1, 1.1);
+  }
+  50% {
+    transform: scale(1.1, 1.1);
+  }
+  75% {
+    transform: scale(1.1, 1.1);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
+}
+html body .logo {
+  animation-name: moverLogo;
+  animation-duration: 3s;
+  animation-delay: 0.5s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
 html body form {
   background-color: #1d0ea5;
   border: solid 1px #161718;
